[package]
name = "platform-serial-arduino-nano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.1.0"
platform-serial = { git = "https://github.com/boshtannik/platform-serial.git" }
avr-device = "0.5.3"
embedded-hal = "0.2.7"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-nano"]
