[package]
name = "platform-serial-arduino-nano"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.1.0"
platform-serial = "1.0.0"
avr-device = "0.5.3"
embedded-hal = "0.2.7"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-nano"]
